--- a/static/index.html
+++ b/static/index.html
@@ -536,7 +536,7 @@ right:0px;
       // Botón compartir
       const shareBtn = document.getElementById('shareBtn');
       shareBtn.addEventListener('click', function () {
-        const shareUrl = 'https://yalosvendieron-production.up.railway.app/';
+        const shareUrl = 'https://yalosvendieron.onrender.com/';
         if (navigator.share) {
           navigator.share({
             title: 'YaLosVendieron',
